// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/URI.proto";


package file.protobuf;

message CollectionDocument {
extensions 5 to 105;

  optional ccsds_mal.protobuf.STRING name = 1;
  optional ccsds_mal.protobuf.STRING version = 2;
  optional ccsds_mal.protobuf.URI uri = 3;
  optional ccsds_mal.protobuf.BOOLEAN brokenLink = 4;
}
